--- a/Prison_Management_System/Form1.resx
+++ b/Prison_Management_System/Form1.resx
@@ -117,4 +117,23 @@
   <resheader name="writer">
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
+  <assembly alias="System.Drawing" name="System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a" />
+  <data name="button1.Image" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
+    <value>
+        iVBORw0KGgoAAAANSUhEUgAAACMAAAAjCAYAAAAe2bNZAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAALpSURBVFhHtZYvclwxDIczExQUFBgcHB6+JDwHCAsqzBl6gx4gNwgvLO0JSktLi9rft6vfjtZP
+        fs9utpr5xms92StL8p+L3afHKSSX4l58Ft/ET/E7Wvro+X5ZjV+jVPaQ3IhX8UP8WYHv2N1U8/QolRWS
+        W/Em8p/+Et/F12jp5+/Y31bzVZTKFsl1TJydIB0PAievoqWPPjvFuOtq3pZS2SJ5EdQFk5OCJ1HWBPr4
+        7lQy7qWybSmVGQkrJgWOyFNl14Jd2DOO8ZvpKpUZCZM6Kl/EVWXXgl3YOzqbiyiVmdkJM9jHuP1CKptM
+        qTQS8v8ek3GO3Fd2PbCPcYxnntWzp1QaBsckTEZBDm9TwD7Gnc0Zb2mK8aGy64F9jGM88/y7MyDhJGWy
+        4S1qsI9xjH+tbDKlMiPJq+PuGUoVdmE/HNVSmZGwRV03wAm7ur35HnYew/jNU7hUtkiIjncFYWe733Vs
+        7+K708O4oVorlS0SCpn82yHgVGX1nCU4S0vfp7UdeRZDz4lSWSFx6L1iQ9+0euyHLkkolRkJTuwEofeZ
+        MQqRYUsPHZal0kicf+8mQ590UJj8GTa0vXcNdpt3Wq081Ag1kPNP2NmqnDvUCFuXd86+Hmijn9812BNN
+        fm/WzVJxmJQ/zKvDKQpx7hl5eKYS3bGb/qSzdIRodLfxLBLmx8EySqedw+rtCC2ODa1qBAnHA6mjXTiU
+        DbnuvVv+hyPUEwXO/LSLlNuQ7evbGUjN2RwBCenxXUXbdYZzxOnB66l3ywiSbWckhM8XIQU79bRcQ8Lc
+        OOFdZWfYnfT9bX9KI0TFd87Q7bqFhF1DkRJlHDB5c2Q9dtTo/kDCAJ6ryWeR5JSMQkCOg+hMPbh7SKrI
+        5GuClr6/HSPjFKH4cIqMxAecWasZwP54tmBwlshUSPhDO0Nb7ibOFAzsEEX8UQj5yZ/RF5vOEC5SZIfO
+        ATWxa/5o+ATGISI0+3jqwZ8tLlcJEaNGaZu76fHiL5gCHbfF+sXVAAAAAElFTkSuQmCC
+</value>
+  </data>
 </root>
